--- a/index.html
+++ b/index.html
@@ -857,6 +857,21 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="container-fluid ftr-con">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12 ftr-end">
+							<a href="#!">Политика конфиденциальности</a>
+							<p>@ 2013 — 2022 ТИГЕО | ТРЕЙД-ИН-ГЕО   Все права защищены</p>
+							<div class="ftr-dev">
+								<a href="#!" class="dev-site">Разработка сайта</a>
+								<a href="#!"><img src="images/ftr-logo.png" alt=""></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</footer>
 	</div>
 
