--- a/app/compare.html
+++ b/app/compare.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="libs/bootstrap5/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.min.css?ver=6">
-  <link rel="stylesheet" href="css/card.css">
+  <link rel="stylesheet icon" href="css/card.css">
 </head>
 
 <body>
