--- a/app/card-item-out-of-product.html
+++ b/app/card-item-out-of-product.html
@@ -1604,6 +1604,11 @@
                                     </svg>
                                 </div>
                             </div>
+
+                            <div class="main-end-text">
+                              <p>Тахеометры используются при проведении геодезических изысканий и во время строительных работ для определения угловых расстояний между точками и измерения линейных расстояний от реперной точки до вешки. Современные электронные устройства позволяют выполнять измерения на удалении до нескольких километров с миллиметровой погрешностью. Однако использовать их не всегда возможно, так как купить товар этого типа могут позволить себе далеко не все геодезические компании.</p>
+                              <p>Если приобрести измерительные приборы компания не хочет или не может, оптимальным вариантом будет аренда тахеометра. Стоимость этой услуги намного меньше, чем затраты на приобретение инструментов. Но благодаря аренде можно в течение дня получить тахеометр с нужными характеристиками и выполнить планируемый объем работ.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
